# fastipc

./: CMakeLists.txt  README.md  fastipc_design.md  flexkv_zmq_benchmark.py  flexkv_zmq_benchmark_report.md
bench/: bench_compare.py  bench_ipc_overhead.py  bench_report.py  bench_zerocopy_vs_zmq.py  fastipc_benchmark_report.md  ipc_overhead_report.md
include/fastipc/: client.hpp  pod.hpp  ring_shm.hpp  server.hpp  shm_pool.hpp  spsc_ring.hpp
python/fastipc/: __init__.py
src/: client.cpp  pybind_module.cpp  ring_shm.cpp  server.cpp  shm_pool.cpp
tests/: selftest.cpp  smoke_concurrent.py  smoke_xproc.py
